fix(rc-mentions): prevent dropdown from overflowing plugin

--- a/packages/tokens-studio-for-figma/src/app/components/DownshiftInput/mentions.css
+++ b/packages/tokens-studio-for-figma/src/app/components/DownshiftInput/mentions.css
@@ -57,8 +57,8 @@
 }
 
 .rc-mentions-dropdown-menu {
-  width: 70vw;
-  max-width: 450px;
+  min-width: 200px;
+  max-width: 60vw;
   margin: 0;
   padding: 0;
   max-height: 250px;
@@ -78,7 +78,6 @@
 
 .rc-mentions-dropdown-menu-item {
   width: 100%;
-  min-width: 150px;
   position: relative;
   border-radius: var(--radii-small);
   color: var(--colors-fgDefault);
